--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1386,7 +1386,7 @@ home_tab.new_warnings=Warnung(en)
 #orig#home_tab.no_computers=No other computers known
 home_tab.no_computers=Keine anderen Computer bekannt
 #orig#home_tab.no_folders=No folders configured
-home_tab.no_folders=Keine Folder konfiguriert
+home_tab.no_folders=Keine Folder gefunden. Klick "Neuer Folder" um zu starten.
 #orig#home_tab.not_running=Not running
 home_tab.not_running=Deaktiviert
 #orig#home_tab.online_storage.account={0} (change)
