add chinese translation strings

--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1790,6 +1790,10 @@ preferences.dialog.information_panel_left=\u9762\u677f\u7f6e\u4e8e\u4e3b\u9762\u
 preferences.dialog.information_panel_right=\u9762\u677f\u7f6e\u4e8e\u4e3b\u9762\u677f\u53f3\u4fa7
 preferences.dialog.information_panel_separate=\u5206\u79bb\u7a97\u53e3
 preferences.dialog.inline_info=\u5728\u540c\u4e00\u7a97\u53e3\u663e\u793a\u8be6\u7ec6\u4fe1\u606f
+preferences.dialog.pf_chooser=\u4f7f\u7528PowerFolder\u76ee\u5f55\u9009\u62e9\u5668
+dialog.directorychooser.new.description=\u65b0\u76ee\u5f55
+dialog.directorychooser.new.exists=\u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\n\n{0}
+dialog.directorychooser.new.problem=\u521b\u5efa\u76ee\u5f55\u51fa\u9519\n\n{0}
 #orig#preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.ip_lan_list=\u5c40\u57df\u7f51IP\u5217\u8868
 #orig#preferences.dialog.lan_line_settings=LAN speed
